Fix alignment of advancement configuration link

--- a/dnd5e.css
+++ b/dnd5e.css
@@ -1646,7 +1646,7 @@
   margin-inline-start: 0.5em;
 }
 .dnd5e.sheet.item .advancement .items-list .main-controls .configuration-mode-control a {
-  text-align: inline-start;
+  text-align: start;
 }
 .dnd5e.sheet.item .advancement .items-list .main-controls .item-add {
   padding-block-start: 0.2em;
